; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_node.c_hci_write_node_link_policy_settings_mask.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_node.c_hci_write_node_link_policy_settings_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ng_btsocket_hci_raw_node_link_policy_mask = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%x\00", align 1
@USAGE = common dso_local global i32 0, align 4
@SIOC_HCI_RAW_NODE_SET_LINK_POLICY_MASK = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hci_write_node_link_policy_settings_mask(i32 %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca %struct.ng_btsocket_hci_raw_node_link_policy_mask, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %10 = call i32 @memset(%struct.ng_btsocket_hci_raw_node_link_policy_mask* %8, i32 0, i32 4)
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %24 [
    i32 1, label %12
  ]

12:                                               ; preds = %3
  %13 = load i8**, i8*** %7, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @sscanf(i8* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %9)
  %17 = icmp ne i32 %16, 1
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* @USAGE, align 4
  store i32 %19, i32* %4, align 4
  br label %35

20:                                               ; preds = %12
  %21 = load i32, i32* %9, align 4
  %22 = and i32 %21, 65535
  %23 = getelementptr inbounds %struct.ng_btsocket_hci_raw_node_link_policy_mask, %struct.ng_btsocket_hci_raw_node_link_policy_mask* %8, i32 0, i32 0
  store i32 %22, i32* %23, align 4
  br label %26

24:                                               ; preds = %3
  %25 = load i32, i32* @USAGE, align 4
  store i32 %25, i32* %4, align 4
  br label %35

26:                                               ; preds = %20
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* @SIOC_HCI_RAW_NODE_SET_LINK_POLICY_MASK, align 4
  %29 = call i64 @ioctl(i32 %27, i32 %28, %struct.ng_btsocket_hci_raw_node_link_policy_mask* %8, i32 4)
  %30 = icmp slt i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %26
  %32 = load i32, i32* @ERROR, align 4
  store i32 %32, i32* %4, align 4
  br label %35

33:                                               ; preds = %26
  %34 = load i32, i32* @OK, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %33, %31, %24, %18
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @memset(%struct.ng_btsocket_hci_raw_node_link_policy_mask*, i32, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1

declare dso_local i64 @ioctl(i32, i32, %struct.ng_btsocket_hci_raw_node_link_policy_mask*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
